# Credit-Risk-Prediction-and-Portfolio-Segmentation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  app.py  main.py  pyproject.toml  requirements-app.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
credit_risk/: config.py  explainability.py  helpers.py  model_evaluator.py  model_trainer.py  reporter.py  visualizer.py
data/: sample_input.csv
docs/: ARCHITECTURE.md  DEPLOY_STREAMLIT.md  MODEL_CARD.md
project/: .env.example  CODE_OF_CONDUCT.md  Dockerfile  Makefile  SECURITY.md  app.py  main.py  pyproject.toml  requirements-app.txt  requirements-core.txt
project/.github/: PULL_REQUEST_TEMPLATE.md
project/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
project/credit_risk/: config.py  data_loader.py  explainability.py  helpers.py  model_evaluator.py  model_trainer.py  portfolio_analyzer.py  reporter.py  visualizer.py
project/docs/: DEPLOY_STREAMLIT.md
project/scripts/: sync_assets.py
project/tests/docs/: DATA.md
scripts/: make_demo_gif.py  sync_assets.py
tests/: test_smoke.py
