[project]
name = "credit-risk-project"
version = "1.4.0"
description = "Credit risk PD prediction + portfolio segmentation (sklearn pipeline + Streamlit demo)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Piyush (PiyushUCD)"}]

[project.urls]
Homepage = "https://github.com/PiyushUCD/Credit-Risk-Prediction-and-Portfolio-Segmentation"
Repository = "https://github.com/PiyushUCD/Credit-Risk-Prediction-and-Portfolio-Segmentation"
Issues = "https://github.com/PiyushUCD/Credit-Risk-Prediction-and-Portfolio-Segmentation/issues"

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "joblib>=1.3",
  "kagglehub>=0.1",
  "matplotlib>=3.7",
  "seaborn>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1.0", "black>=23.0"]
app = ["streamlit>=1.34"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["models", "results", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff.lint]
extend-select = ["I", "B", "UP"]
ignore = ["E501"]
